--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Mensagem para Inês Lourenço</title>
     <style>
         @font-face {
-            font-family: 'Honey Florist';
-            src: url('fonts/Honey Florist - Personal Use.otf') format('opentype');
+    font-family: 'Honey Florist';
+    src: url('https://raw.githubusercontent.com/edupokenyt0707/-mensagem-para-amiga/main/fonts/Honey%20Florist%20-%20Personal%20Use.otf') format('opentype');
+}
+
         }
         body {
             font-family: 'Honey Florist', sans-serif;
