--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <style>
         @font-face {
             font-family: 'Honey Florist';
-            src: url('https://raw.githubusercontent.com/edupokenyt0707/-mensagem-para-amiga/main/fonts/Honey%20Florist%20-%20Personal%20Use.otf') format('opentype');
+            src: url('https://cdn.jsdelivr.net/gh/edupokenyt0707/-mensagem-para-amiga/fonts/Honey%20Florist%20-%20Personal%20Use.otf') format('opentype');
         }
-
         body {
             font-family: 'Honey Florist', sans-serif;
             font-size: 42px; /* Ajustado para 42px conforme solicitado */
