--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <style>
         @font-face {
             font-family: 'Honey Florist';
-            src: url('https://cdn.jsdelivr.net/gh/edupokenyt0707/-mensagem-para-amiga/Honey%20Florist%20-%20Personal%20Use.otf') format('opentype');
+            src: url('https://cdn.jsdelivr.net/gh/edupokenyt0707/-mensagem-para-amiga/fonts/Honey%20Florist%20-%20Personal%20Use.otf') format('opentype');
         }
         body {
             font-family: 'Honey Florist', sans-serif;
-            font-size: 42px; /* Ajustado para 42px conforme solicitado */
-            margin: 96px; /* Margens de 1 polegada (96px) */
+            font-size: 42px;
+            margin: 96px;
             line-height: 1.6;
-            background-color: #FAF3E0; /* Cor de fundo pastel */
-            color: #000000; /* Cor do texto */
+            background-color: #FAF3E0;
+            color: #000000;
         }
         h1 {
             text-align: center;
         }
         p {
             text-align: justify;
-            margin-bottom: 20px; /* Espaçamento entre os parágrafos */
+            margin-bottom: 20px;
         }
         .signature {
             margin-top: 20px;
